--- a/style.html
+++ b/style.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My second github repo</title>
+    <title>github practice</title>
 </head>
 <body>
-    <h1>WELCOME TO MY WEBSITE</h1>
+    welcome to my website
 </body>
 </html>
