my first adding practice

--- a/style.html
+++ b/style.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>github practice</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    welcome to my website
+   <div>
+    <h1> welcome to my website  </h1>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus aut delectus doloremque cum dolore aperiam quasi, inventore ipsum molestiae, ratione culpa? Ex unde quia adipisci. Reiciendis laboriosam facilis porro dolor?</p>
+   </div>
 </body>
 </html>
