my second github practice

--- a/style.html
+++ b/style.html
@@ -11,5 +11,17 @@
     <h1> welcome to my website  </h1>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus aut delectus doloremque cum dolore aperiam quasi, inventore ipsum molestiae, ratione culpa? Ex unde quia adipisci. Reiciendis laboriosam facilis porro dolor?</p>
    </div>
+   <div>
+    <h1> welcome to my website  </h1>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus aut delectus doloremque cum dolore aperiam quasi, inventore ipsum molestiae, ratione culpa? Ex unde quia adipisci. Reiciendis laboriosam facilis porro dolor?</p>
+   </div>
+   <div>
+    <h1> welcome to my website  </h1>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus aut delectus doloremque cum dolore aperiam quasi, inventore ipsum molestiae, ratione culpa? Ex unde quia adipisci. Reiciendis laboriosam facilis porro dolor?</p>
+   </div>
+   <div>
+    <h1> welcome to my website  </h1>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus aut delectus doloremque cum dolore aperiam quasi, inventore ipsum molestiae, ratione culpa? Ex unde quia adipisci. Reiciendis laboriosam facilis porro dolor?</p>
+   </div>
 </body>
 </html>
