some github command added

--- a/style.html
+++ b/style.html
@@ -23,5 +23,12 @@
     <h1> welcome to my website  </h1>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus aut delectus doloremque cum dolore aperiam quasi, inventore ipsum molestiae, ratione culpa? Ex unde quia adipisci. Reiciendis laboriosam facilis porro dolor?</p>
    </div>
+
+   <div>
+    <h1>How to add incremental code</h1>
+    <li>git add .</li>
+    <li>git commit -m"add a meaningful message'</li>
+    <li>git push</li>
+   </div>
 </body>
 </html>
